Fixed issue where there was a small amount of horizontal scroll

--- a/Tinville/static/css/main2.css
+++ b/Tinville/static/css/main2.css
@@ -41,6 +41,10 @@ body {
   }
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .navbar-text {
     font-size: 2em;
     margin-top: 5px;
